--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
